src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Apellido_materno__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Apellido materno</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_departamento__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Área / departamento</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_Realcion_con_cliente__c</fullName>
        <description>Relación con el cliente principal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relación con el cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ca_tieneEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox que se activa si el contacto tiene Email.No se utiliza formula debido a que el cifrado de la plataforma no lo permite.</description>
        <label>Tiene email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ca_tieneNombre__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox que se activa si el contacto tiene Nombre.No se utiliza formula debido a que el cifrado de la plataforma no lo permite.</description>
        <label>Tiene nombre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ca_tieneTelefono__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox que se activa si el contacto tiene telefono.No se utiliza formula debido a que el cifrado de la plataforma no lo permite.</description>
        <label>Tiene telefono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCIONISTA</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR</fullName>
                </value>
                <value>
                    <fullName>ASESOR</fullName>
                </value>
                <value>
                    <fullName>ASISTENTE</fullName>
                </value>
                <value>
                    <fullName>CONTADOR</fullName>
                </value>
                <value>
                    <fullName>CONTADOR GENERAL</fullName>
                </value>
                <value>
                    <fullName>COORDINADOR</fullName>
                </value>
                <value>
                    <fullName>DELEGADO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR DE MARCA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR DE PROYECTO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR DE TITULACIÓN / COMERCIALIZACIÓN</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR FINANCIERO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR GENERAL</fullName>
                </value>
                <value>
                    <fullName>DUEÑO</fullName>
                </value>
                <value>
                    <fullName>F&amp;I</fullName>
                </value>
                <value>
                    <fullName>FINANZAS</fullName>
                </value>
                <value>
                    <fullName>GERENTE</fullName>
                </value>
                <value>
                    <fullName>GERENTE COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE VENTA</fullName>
                </value>
                <value>
                    <fullName>GERENTE GENERAL</fullName>
                </value>
                <value>
                    <fullName>GOBERNADOR</fullName>
                </value>
                <value>
                    <fullName>INPLANT</fullName>
                </value>
                <value>
                    <fullName>JEFE</fullName>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                </value>
                <value>
                    <fullName>OTRO</fullName>
                </value>
                <value>
                    <fullName>PDTE MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>PRESIDENTE</fullName>
                </value>
                <value>
                    <fullName>SECRETARIO</fullName>
                </value>
                <value>
                    <fullName>SUBDELEGADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR1__c</fullName>
        <formula>Owner.CR__c</formula>
        <label>CR Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Banca__c</fullName>
        <label>Banca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banca Comercial</fullName>
                </value>
                <value>
                    <fullName>Banca Patrimonial</fullName>
                </value>
                <value>
                    <fullName>Pyme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Division__c</fullName>
        <label>División</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bajio</fullName>
                </value>
                <value>
                    <fullName>Metropolitana Norte</fullName>
                </value>
                <value>
                    <fullName>Metropolitana Sur</fullName>
                </value>
                <value>
                    <fullName>Noreste</fullName>
                </value>
                <value>
                    <fullName>Noroeste</fullName>
                </value>
                <value>
                    <fullName>Occidente</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
                <value>
                    <fullName>Sureste</fullName>
                </value>
                <value>
                    <fullName>Division Sureste</fullName>
                    <isActive>false</isActive>
                    <label>Division Sureste</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Puesto__c</fullName>
        <label>Puesto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asesor Banca Personal</fullName>
                </value>
                <value>
                    <fullName>Asesor Comercial</fullName>
                </value>
                <value>
                    <fullName>Asesor de Crédito</fullName>
                </value>
                <value>
                    <fullName>Asesor Nómina</fullName>
                </value>
                <value>
                    <fullName>Especialista Bancario</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <formula>TEXT(Owner.Divisi_n__c)</formula>
        <label>División Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_personal__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Email personal</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ENGMX_lm_Nivel_de_Responsabilidad__c</fullName>
        <label>Nivel de Responsabilidad</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decisor</fullName>
                </value>
                <value>
                    <fullName>Técnico</fullName>
                </value>
                <value>
                    <fullName>Operativo</fullName>
                </value>
                <value>
                    <fullName>Ejecutor</fullName>
                </value>
                <value>
                    <fullName>Directivo</fullName>
                </value>
                <value>
                    <fullName>Dueño de la empresa.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_fax__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Extensión fax</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_oficina__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Extensión oficina</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_otro_telefono__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Extensión otro teléfono</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_referencia__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Extensión referencia</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Autorizador_DG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona un Contacto a la Cuenta</description>
        <label>Autorizador DG</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Correo_Electronico__c</fullName>
        <description>Campo para la aplicación Workflow, registra el correo electrónico del contacto</description>
        <label>Correo Electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de relación de búsqueda para la aplicación Workflow devuelve el contacto con rol de director</description>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos (Director)</relationshipLabel>
        <relationshipName>Contactos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Funcion__c</fullName>
        <description>Campo para la aplicación Workflow que permite al usuario elegir la función del contacto que se está creando</description>
        <label>Función</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Líder</fullName>
                </value>
                <value>
                    <fullName>Generador</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Producto</fullName>
                </value>
                <value>
                    <fullName>Journey</fullName>
                </value>
                <value>
                    <fullName>Ventas Digitales</fullName>
                </value>
                <value>
                    <fullName>Gerencia</fullName>
                </value>
                <value>
                    <fullName>Implementador</fullName>
                </value>
                <value>
                    <fullName>Seguimiento</fullName>
                </value>
                <value>
                    <fullName>ASESOR NÓMINA</fullName>
                </value>
                <value>
                    <fullName>Asesor comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Jefe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de relación de búsqueda con contactos para la aplicación Workflow que permite al usuario elegir el jefe del contacto que está dando de alta</description>
        <label>Jefe</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos (Jefe)</relationshipLabel>
        <relationshipName>Contactos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Completo__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Completo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Suplente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de relación de búsqueda para la aplicación Workflow , permite al usuario elegir el suplente del contacto que este dando de alta</description>
        <label>Suplente</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos (Suplente)</relationshipLabel>
        <relationshipName>Contactos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Telefono_Extension__c</fullName>
        <description>Campo para la aplicación Workflow , permite capturar el teléfono del contacto que se da de alta</description>
        <label>Teléfono/Extensión</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Usuario_Red__c</fullName>
        <description>Campo para la aplicación Workflow, permite registrar el código del contacto para el entorno colaborativo</description>
        <label>Usuario Red</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_Age__c</fullName>
        <description>Calcula la edad del cliente basado en el campo fecha de nacimiento</description>
        <formula>FLOOR((today() - Birthdate) / 365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_BirthEntity__c</fullName>
        <description>Entidad de nacimiento.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entidad de Nacimiento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_CountryOfBirth__c</fullName>
        <description>País de nacimiento.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>País de Nacimiento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_Deceased__c</fullName>
        <description>Permite identificar si el cliente a fallecido</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cliente Fallecido</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_Gender__c</fullName>
        <description>Genero del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Género</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_IdExpirationDate__c</fullName>
        <description>Fecha de vencimiento de ID oficial del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Vencimiento de ID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_IdType__c</fullName>
        <description>Tipo de ID información proveniente de Data Mart para clientes BPyP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_MainClientRelationship__c</fullName>
        <description>Listado parentesco que No puede ser relacionarlo a un cliente principal si este cliente es principal</description>
        <label>Parentesco con el cliente principal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hija/Hijo</fullName>
                </value>
                <value>
                    <fullName>Nieta/Nieto</fullName>
                </value>
                <value>
                    <fullName>Prima/Primo</fullName>
                </value>
                <value>
                    <fullName>Hermana/Hermano</fullName>
                </value>
                <value>
                    <fullName>Sobrina/Sobrino</fullName>
                </value>
                <value>
                    <fullName>Amiga/Amigo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_MaritalStatus__c</fullName>
        <description>Estado Civil del cliente información proveniente de DataMart</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estado Civil</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_Nationality__c</fullName>
        <description>Nacionalidad del cliente información obtenidad del Data Mart</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nacionalidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_NextBirthday__c</fullName>
        <description>Campo formula que calcula la fecha del próximo cumpleaños de los clientes, basado en el campo Birthdate.</description>
        <formula>IF( MONTH(Birthdate)=2&amp;&amp; DAY(Birthdate)=29,IF(TODAY()-1&lt;DATE(YEAR(TODAY()),1,1)+59, DATE(YEAR(TODAY()),1,1)+58, DATE(YEAR(TODAY())+1,1,1)+58), IF(TODAY()-1&lt;DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)), DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)), DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Próximo Cumpleaños</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_OccupationCode__c</fullName>
        <description>Clave de la ocupación, por ejemplo ABT.</description>
        <label>Clave de ocupación</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_Occupation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABT</fullName>
                </value>
                <value>
                    <fullName>AGP</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>ALM</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>ARD</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>ART</fullName>
                </value>
                <value>
                    <fullName>ASG</fullName>
                </value>
                <value>
                    <fullName>ASS</fullName>
                </value>
                <value>
                    <fullName>AST</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AVI</fullName>
                </value>
                <value>
                    <fullName>AYU</fullName>
                </value>
                <value>
                    <fullName>BIE</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHO</fullName>
                </value>
                <value>
                    <fullName>CIE</fullName>
                </value>
                <value>
                    <fullName>CMB</fullName>
                </value>
                <value>
                    <fullName>CNF</fullName>
                </value>
                <value>
                    <fullName>CNT</fullName>
                </value>
                <value>
                    <fullName>COF</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>DCT</fullName>
                </value>
                <value>
                    <fullName>DEP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_Occupation__c</fullName>
        <description>Listado de ocupaciones asociadas al cliente o candidato</description>
        <label>Ocupación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABARROTES</fullName>
                </value>
                <value>
                    <fullName>AGRICULTURA PESCA Y GANADERIA</fullName>
                </value>
                <value>
                    <fullName>PRODUCCION DE ALIMENTOS BEBIDAS Y TABACO</fullName>
                </value>
                <value>
                    <fullName>ALMACENAMIENTO</fullName>
                </value>
                <value>
                    <fullName>AGENCIA PROMOCION/PU</fullName>
                </value>
                <value>
                    <fullName>ARRENDADORA</fullName>
                </value>
                <value>
                    <fullName>ARTESANO</fullName>
                </value>
                <value>
                    <fullName>ARTES</fullName>
                </value>
                <value>
                    <fullName>ASEGURADORA</fullName>
                </value>
                <value>
                    <fullName>ASISTENCIA SOCIAL</fullName>
                </value>
                <value>
                    <fullName>ASISTENTE</fullName>
                </value>
                <value>
                    <fullName>AUDITORIA Y CONTABILIDAD</fullName>
                </value>
                <value>
                    <fullName>AUTOSERVICIO</fullName>
                </value>
                <value>
                    <fullName>AUTOMOTRIZ</fullName>
                </value>
                <value>
                    <fullName>AGENCIA DE VIAJES</fullName>
                </value>
                <value>
                    <fullName>AYUDANTE</fullName>
                </value>
                <value>
                    <fullName>BIENES RAICES</fullName>
                </value>
                <value>
                    <fullName>BOMBERO</fullName>
                </value>
                <value>
                    <fullName>BRACERO</fullName>
                </value>
                <value>
                    <fullName>CARPINTERIA/DECORACI</fullName>
                </value>
                <value>
                    <fullName>CHOFER</fullName>
                </value>
                <value>
                    <fullName>CIENCIAS</fullName>
                </value>
                <value>
                    <fullName>CAMBACEO</fullName>
                </value>
                <value>
                    <fullName>COMERCIANTE NO FIJO</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCCION</fullName>
                </value>
                <value>
                    <fullName>COMERCIANTE FIJO</fullName>
                </value>
                <value>
                    <fullName>COMUNICACIONES</fullName>
                </value>
                <value>
                    <fullName>CONTRATISTA</fullName>
                </value>
                <value>
                    <fullName>DESPACHO CONTABLE</fullName>
                </value>
                <value>
                    <fullName>DEPORTES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Codigo_Lugar__c</fullName>
        <description>Campo para la captura del codigo del lugar del contacto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código del Lugar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Zona__c</fullName>
        <description>Campo para la aplicación WF que permite informar la zona en la que se encuentra el Asesor comercial.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Comentarios__c</fullName>
        <description>Campo para añadir comentarios relacionados al contacto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Control_Equipo__c</fullName>
        <description>Campo de resumen para la aplicación RTE, controla el número de iniciativas en las que el contacto está asociado</description>
        <label>Control Equipos</label>
        <summaryFilterItems>
            <field>MX_RTE_Equipo__c.MX_RTE_Activo__c</field>
            <operation>equals</operation>
            <value>Sí</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Equipo__c.MX_RTE_Nombre__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Direccion__c</fullName>
        <description>Campo en el que se captura la dirección(Departamento) asociada al contacto</description>
        <label>Dirección</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADMÓN INTEGRAL DE RIESGOS Y CUMPLIMIENTO</fullName>
                </value>
                <value>
                    <fullName>ADQUIRA</fullName>
                </value>
                <value>
                    <fullName>ANTIFRAUD GOVERNANCE</fullName>
                </value>
                <value>
                    <fullName>ARCHITECTURE &amp; GLOBAL DEPLOY.</fullName>
                </value>
                <value>
                    <fullName>ARCHITECTURE ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>ARCHITECTURE SECURITY</fullName>
                </value>
                <value>
                    <fullName>AREA TEC ARQ DE CTAS Y EMIS C</fullName>
                </value>
                <value>
                    <fullName>ÁREA TÉCNICA</fullName>
                </value>
                <value>
                    <fullName>ARQUITECTURA</fullName>
                </value>
                <value>
                    <fullName>ARQUITECTURA CONTABLE</fullName>
                </value>
                <value>
                    <fullName>ARQUITECTURA DE CANALES</fullName>
                    <isActive>false</isActive>
                    <label>ARQUITECTURA DE CANALES</label>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>AST CANALES</fullName>
                    <isActive>false</isActive>
                    <label>AST CANALES</label>
                </value>
                <value>
                    <fullName>AUTOSERVICIO</fullName>
                </value>
                <value>
                    <fullName>BACKEND ARCHITECTURE</fullName>
                </value>
                <value>
                    <fullName>BACKEND ARCHITECTURE &amp; APP INF</fullName>
                    <isActive>false</isActive>
                    <label>BACKEND ARCHITECTURE &amp; APP INF</label>
                </value>
                <value>
                    <fullName>BACKEND ARQUITECTURA (APX)</fullName>
                </value>
                <value>
                    <fullName>BANCA MOVIL</fullName>
                </value>
                <value>
                    <fullName>BCOM</fullName>
                </value>
                <value>
                    <fullName>BE&amp;G</fullName>
                </value>
                <value>
                    <fullName>BÓDEVA DIGITAL</fullName>
                </value>
                <value>
                    <fullName>BOVEDA</fullName>
                    <isActive>false</isActive>
                    <label>BOVEDA</label>
                </value>
                <value>
                    <fullName>BOVEDA ELECTRONICA</fullName>
                    <isActive>false</isActive>
                    <label>BOVEDA ELECTRONICA</label>
                </value>
                <value>
                    <fullName>BÓVEDA ELECTRÓNICA</fullName>
                </value>
                <value>
                    <fullName>BPA&amp;AIT</fullName>
                </value>
                <value>
                    <fullName>BUSINESS INTELIGENT</fullName>
                </value>
                <value>
                    <fullName>BUSINESS PROCESS ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>BUSINESS SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>CANALES DIGITALES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>